--- a/machine.html
+++ b/machine.html
@@ -112,7 +112,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -178,7 +178,7 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
 healthcare?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -204,7 +204,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ollkbfwV&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nLy3iMwV'>Align Technology Careers - Machine Learning Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ollkbfwV&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nLy3iMwV'>Align Technology Careers - Machine Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -243,7 +243,7 @@ to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...
 Cambridge; Senior Manager, Outbound Marketing, ML San Jose (CA); Senior 
 Product?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensor-tech.join.com/jobs/449941-machine-learning-engineer'>Machine Learning ... | JOIN - Job @ Tensor Technologies (Zug)</a></h5> 
+<h5><a href='https://tensor-tech.join.com/jobs/449941-machine-learning-engineer'>Machine Learning ... | JOIN - Job @ Tensor Technologies (Zug)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
@@ -265,7 +265,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>2 days ago ... Cruise is looking for ML optimization engineers to help us invest in tools to 
 optimize deep learning models for efficient inference. These optimizations are?...</p>
 <hr/>
-<h5><a href='https://bigcloud.io/jobs/senior-machine-learning-researcher/'>Senior Machine Learning Researcher | Big Cloud Recruitment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bigcloud.io/jobs/senior-machine-learning-researcher/'>Senior Machine Learning Researcher | Big Cloud Recruitment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -366,7 +366,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oC25afwD'>Splunk Careers - Machine Learning Intern (Summer 2019)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/oC25afwD'>Splunk Careers - Machine Learning Intern (Summer 2019)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -383,7 +383,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/pager/jobs/1913530'>Job Application for Machine Learning Engineer at Pager</a></h5> 
+<h5><a href='https://boards.greenhouse.io/pager/jobs/1913530'>Job Application for Machine Learning Engineer at Pager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 11, 2019 ... Opportunity. Pager is looking to hire a Machine Learning Engineer to build and 
 deploy Machine Learning models into the company's core services. You'll be?...</p>
@@ -392,7 +392,7 @@ deploy Machine Learning models into the company's core services. You'll be?...</
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idalab.softgarden.io/job/5132937/Machine-Learning-Engineer-for-Drug-Development-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14043567&amp;l=en'>Machine Learning Engineer for Drug Development at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
+<h5><a href='https://idalab.softgarden.io/job/5132937/Machine-Learning-Engineer-for-Drug-Development-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14043567&amp;l=en'>Machine Learning Engineer for Drug Development at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -430,7 +430,7 @@ to?...</p>
 <p><span class="badge badge-light">Buenos Aires  Buenos Aires</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://so1.join.com/jobs/443932-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/443932-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -491,7 +491,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='http://www.cs.cmu.edu/~rayid/jobs.html?fbclid=IwAR1UxTT-6H6XdriaFPuYPqFtGGb65lpz0V3Gz30zxvKPS0w5RoKLFjEJHp4'>Carnegie Mellon University Jobs ? Rayid Ghani - AI, Machine Learning, Data Science for Social Good and Public Policy</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://www.cs.cmu.edu/~rayid/jobs.html?fbclid=IwAR1UxTT-6H6XdriaFPuYPqFtGGb65lpz0V3Gz30zxvKPS0w5RoKLFjEJHp4'>Carnegie Mellon University Jobs ? Rayid Ghani - AI, Machine Learning, Data Science for Social Good and Public Policy</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
